# CacheExplorer

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  PROJECT_HISTORY.md  README.md  RELEASE_NOTES.md  vcpkg.json
.github/ISSUE_TEMPLATE/: beta-bug-report.md
.github/workflows/: draft-release.yml  linux-ci.yml  macos-ci.yml  windows-ci.yml
cachecli/: CMakeLists.txt  main.cpp
cachegui/: CMakeLists.txt  CacheEntryTableModel.cpp  GalleryActivityIndicator.cpp  GalleryActivityIndicator.h  GalleryFilterProxyModel.cpp  GalleryFilterProxyModel.h  GalleryPreviewController.cpp  GalleryPreviewController.h  GalleryPreviewMetrics.cpp  GalleryPreviewMetrics.h  GalleryPreviewScanner.cpp  GuiUtils.cpp  GuiUtils.h  PreviewCache.cpp  PreviewDecodeWorker.cpp  PreviewDecodeWorker.h  PreviewImage.cpp  PreviewImage.h  PreviewPanel.cpp  PreviewStatus.cpp  PreviewStatus.h  PreviewWorkerState.cpp  QtAboutDialog.cpp  QtActionState.cpp  QtActionState.h  QtFileDialogs.cpp  QtGallerySort.cpp  QtGallerySort.h  QtGalleryStatus.h  QtHelpers.cpp  QtHelpers.h  QtPreviewStateStore.cpp  QtSelection.cpp  QtSelection.h  QtTextureDetails.cpp  QtTextureDetails.h  QtTextureExport.cpp  QtViewMode.cpp  TryNextPreviewState.cpp  cachegui_tests.cpp  (+1 more)
cachegui/resources/: cacheexplorer.rc  io.github.deliatafler.CacheExplorer.desktop
cachegui_qt/: CMakeLists.txt  CacheEntryTableModel.cpp  CacheEntryTableModel.h  GalleryActivityIndicator.cpp  GalleryActivityIndicator.h  GalleryFilterProxyModel.cpp  GalleryFilterProxyModel.h  GalleryListView.cpp  GalleryListView.h  GalleryPreviewController.cpp  GalleryPreviewController.h  GalleryPreviewQueue.cpp  GalleryPreviewQueue.h  GalleryPreviewScanner.cpp  GalleryPreviewScanner.h  PreviewCache.cpp  PreviewCache.h  PreviewDecodeWorker.cpp  PreviewDecodeWorker.h  PreviewPanel.cpp  PreviewPanel.h  PreviewStatus.cpp  PreviewStatus.h  PreviewWorkerState.cpp  PreviewWorkerState.h  QtAboutDialog.cpp  QtAboutDialog.h  QtActionState.cpp  QtActionState.h  QtFileDialogs.cpp  QtFileDialogs.h  QtGallerySort.cpp  QtGallerySort.h  QtGalleryStatus.cpp  QtHelpers.cpp  QtHelpers.h  QtPreviewStateStore.h  QtSelection.cpp  QtSelection.h  QtTextureExport.cpp  (+6 more)
cachelib/: CMakeLists.txt  J2CDecoder.cpp  J2CDecoder.h  PngWriter.cpp  PngWriter.h  Structures.h  TextureCacheDatabase.cpp  TextureCacheDatabase.h  TextureExportState.cpp  TextureExportState.h  TextureExporter.cpp  TextureExporter.h  TextureRebuilder.cpp  TextureRebuilder.h  TextureSelection.cpp  TextureSelection.h  UUID.cpp  UUID.h
docs/: beta-release-checklist.md  post-beta-roadmap.md  qt-build.md  qt-gui-validation.md  qt-packaging.md  qt-user-guide.md  win32-deprecation.md  work-checklist.md
scripts/: configure-qt-prebuilt.ps1  generate-macos-icon.sh  launch-qt-prebuilt.ps1  package-qt-shared.ps1  test-qt-linux-package.sh  test-qt-macos-package.sh  test-qt-package.ps1  test-windows-installer.ps1
tests/: CMakeLists.txt  cachegui_tests.cpp  cachelib_tests.cpp
